# GraphicDemo

./: .gitignore  README.mk  detect_lib  recog_lib  settings.gradle
app/: CMakeLists.txt  build.gradle  cpp_crash_log.md
app/src/androidTest/java/com/albertsnow/graphicdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Hello.cpp  MyProcess.h  OcrGroup.cpp  Process  ReferenceTest.cpp  TestException.cpp  TestFile.cpp  TestInheritance.cpp  TestOperator.cpp  TestProcess.cpp  TestProcess.h  TestTemplate.cpp  com_albertsnow_graphicdemo_jni_TestException.cpp  com_albertsnow_graphicdemo_jni_TestException.h  com_albertsnow_graphicdemo_jni_TestJNI.cpp  com_albertsnow_graphicdemo_jni_TestReference.h  com_albertsnow_graphicdemo_jni_exception_TestException.cpp  com_albertsnow_graphicdemo_looper_MyLooper.cpp  com_albertsnow_graphicdemo_looper_MyLooper.h  native-lib.cpp  native-lib.h
app/src/main/cpp/loop/: MyLooper.cpp  MyLooper.h
app/src/main/java/com/albertsnow/graphicdemo/: MainActivity.java  MainActivity.kt  MyApplication.kt  RecogManager.java  SecondActivity.java  TestJNI.java
app/src/main/java/com/albertsnow/graphicdemo/Utils/: LogUtil.java  SystemUtils.java
app/src/main/java/com/albertsnow/graphicdemo/base/: BaseActivity.kt  BaseFragment.kt
app/src/main/java/com/albertsnow/graphicdemo/camera/: CameraActivity.kt  CameraOrientationManager.kt
app/src/main/java/com/albertsnow/graphicdemo/home/: HomeActivity.java
app/src/main/java/com/albertsnow/graphicdemo/jni/: ExceptionActivity.java  TestException.java  TestJNI.java  TestReference.java
app/src/main/java/com/albertsnow/graphicdemo/jni/exception/: ExceptionActivity.java  TestException.java
app/src/main/java/com/albertsnow/graphicdemo/lifecycle/: LifeCycleActivity.kt
app/src/main/java/com/albertsnow/graphicdemo/looper/: LooperActivity.kt  LooperManager.kt  MyLooper.java
app/src/main/java/com/albertsnow/graphicdemo/opencv/: FirstFragment.kt  OpenCVActivity.kt  SecondFragment.kt
app/src/main/java/com/albertsnow/graphicdemo/opengl/: AbsOpenGLActivity.kt  EglCore.java  EglSurfaceBase.java  MultiTextureActivity.kt  OpenGLActivity.kt  QuickSurfaceActivity.kt  TestEgl.java  WindowSurface.java
app/src/main/java/com/albertsnow/graphicdemo/opengl/render/: AbsOpenGLProgram.kt  CameraOpenGLRender.kt  CameraTextureGLProgram.kt  DynamicTextureGLProgram.kt  IOpenGLProgram.kt  Matrix44F.kt  MutliTextureGLProgram.kt  OpenGLRender.kt  OpenglProgram.kt  Vec2F.kt
app/src/main/java/com/albertsnow/graphicdemo/opengl/shape/: Triangle.kt
app/src/main/java/com/albertsnow/graphicdemo/opengl/transform/: TransformActivity.kt  TransformOpenGLRender.kt
app/src/main/java/com/albertsnow/graphicdemo/opengl/utils/: CameraUtils.java  GlUtil.java  OpenglUtils.kt  PermissionHelper.java  TextureHelper.kt
app/src/main/java/com/albertsnow/graphicdemo/widget/: AspectFrameLayout.java  CustomFragmentManager.kt  WidgetActivity.kt
app/src/main/java/com/albertsnow/graphicdemo/widget/scroll/: FitWidthScaleImageView.java  MultiScrollActivity.java  TouchScaleImageView.java  ZoomView.java
app/src/main/java/com/albertsnow/graphicdemo/widget/textview/: TextViewFragment.kt  TextViewManager.kt
app/src/main/res/layout/: activity_exception.xml  activity_life_cycle.xml  activity_looper.xml  activity_main.xml  activity_open_c_v.xml  activity_scroll.xml  activity_second.xml  activity_widget.xml  camera_activity.xml  content_looper.xml  content_main.xml  content_open_c_v.xml  content_widget.xml  fragment_text_view.xml  quick_surface_activity.xml  transform_layout.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/albertsnow/graphicdemo/: ExampleUnitTest.kt  Solution.java
gradle/wrapper/: gradle-wrapper.properties
nativelibrary/: CMakeLists.txt  build.gradle
nativelibrary/src/androidTest/java/com/albertsnow/nativelibrary/: ExampleInstrumentedTest.java
nativelibrary/src/main/: AndroidManifest.xml
nativelibrary/src/main/cpp/: Test.h.in  TestConfig.cpp
nativelibrary/src/test/java/com/albertsnow/nativelibrary/: ExampleUnitTest.java
opencv4-ndk19/sdk/java/src/org/opencv/core/: Core.java
opencv4-ndk19/sdk/java/src/org/opencv/imgproc/: Imgproc.java
opencv4-ndk19/sdk/java/src/org/opencv/text/: Text.java
opencv4-ndk19/sdk/native/jni/: OpenCV-arm64-v8a.mk  OpenCV.mk
opencv4-ndk19/sdk/native/jni/abi-arm64-v8a/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
opencv4-ndk19/sdk/native/jni/include/opencv2/: cvconfig.h  opencv_modules.hpp
opencvlibrary/: CMakeLists.txt  build.gradle
opencvlibrary/src/androidTest/java/com/albert/opencvlibrary/: ExampleInstrumentedTest.java
opencvlibrary/src/main/: AndroidManifest.xml
opencvlibrary/src/main/cpp/com/albert/opencvlibrary/: DebugUtils.cpp  DebugUtils.h  PictureUtils.cpp  filter.cpp
opencvlibrary/src/main/java/com/albert/opencvlibrary/: CVPictureUtils.java
opencvlibrary/src/test/java/com/albert/opencvlibrary/: ExampleUnitTest.java
